# ai-defense-python-sdk

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
aidefense/: __init__.py  client.py  (+4 more)
examples/agentsec/1-simple/: __init__.py  azure_openai_mcp_example.py  basic_protection.py  bedrock_mcp_example.py  cohere_example.py  cohere_mcp_example.py  custom_rules_example.py  gateway_mode_example.py  mcp_example.py  mcp_oauth2_direct_auth_debug.py  mcp_oauth2_mock_example.py  mistral_example.py  mistral_mcp_example.py  multi_gateway_example.py  openai_example.py  openai_mcp_example.py  pyproject.toml  run-all-integration-tests.sh  simple_strands_bedrock.py  skip_inspection_example.py  streaming_example.py  test_auth_modes.py
examples/agentsec/1-simple/tests/: __init__.py
examples/agentsec/1-simple/tests/integration/: __init__.py  test-simple-examples.sh
examples/agentsec/1-simple/tests/unit/: __init__.py  test_simple_examples.py
examples/agentsec/2-agent-frameworks/crewai-agent/: agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/crewai-agent/config/: config.yaml
examples/agentsec/2-agent-frameworks/crewai-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/crewai-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/crewai-agent/tests/unit/: __init__.py  test_crewai_example.py
examples/agentsec/2-agent-frameworks/langgraph-agent/: agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/langgraph-agent/config/: config-bedrock.yaml  config.yaml
examples/agentsec/2-agent-frameworks/langgraph-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/langgraph-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/langgraph-agent/tests/unit/: __init__.py  test_langgraph_example.py
examples/agentsec/2-agent-frameworks/openai-agent/: agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/openai-agent/config/: config-azure.yaml  config-openai.yaml  config.yaml
examples/agentsec/2-agent-frameworks/openai-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/openai-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/openai-agent/tests/unit/: __init__.py  test_openai_example.py
examples/agentsec/2-agent-frameworks/strands-agent/: agent.py  pyproject.toml
examples/agentsec/2-agent-frameworks/strands-agent/config/: config-bedrock.yaml  config.yaml
examples/agentsec/2-agent-frameworks/strands-agent/scripts/: run.sh
examples/agentsec/2-agent-frameworks/strands-agent/tests/integration/: test-all-providers.sh
examples/agentsec/2-agent-frameworks/strands-agent/tests/unit/: __init__.py  test_strands_example.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/: agentsec.yaml  pyproject.toml
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/_shared/: __init__.py  agent_factory.py  mcp_tools.py  tools.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/container-deploy/: Dockerfile  agentcore_app.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/container-deploy/scripts/: deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/direct-deploy/: agentcore_app.py  requirements.txt  test_with_protection.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/direct-deploy/scripts/: deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/lambda-deploy/: lambda_handler.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/lambda-deploy/scripts/: deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/tests/integration/: test-all-modes.sh  test_mcp_protection.py
examples/agentsec/3-agent-runtimes/amazon-bedrock-agentcore/tests/unit/: test_agentcore_example.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/: pyproject.toml
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/_shared/: __init__.py  agent_engine_entry.py  agent_factory.py  mcp_tools.py  tools.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/agent-engine-deploy/: app.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/agent-engine-deploy/agent_engine_entry/: __init__.py  entry.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/agent-engine-deploy/scripts/: cleanup.sh  deploy.sh  invoke.sh  list-deployed-agents.sh
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/cloud-run-deploy/: Dockerfile  app.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/cloud-run-deploy/scripts/: cleanup.sh  deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/gke-deploy/: Dockerfile  app.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/gke-deploy/k8s/: deployment.yaml  service.yaml
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/gke-deploy/scripts/: cleanup.sh  deploy.sh  invoke.sh
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/scripts/: list-deployed-agents.sh
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/tests/: __init__.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/tests/integration/: __init__.py  test-all-modes.sh  test_mcp_protection.py
examples/agentsec/3-agent-runtimes/gcp-vertex-ai-agent-engine/tests/unit/: __init__.py  test_vertex_agent_example.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/: pyproject.toml
examples/agentsec/3-agent-runtimes/microsoft-foundry/_shared/: __init__.py  agent_factory.py  mcp_tools.py  tools.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/azure-functions/: function_app.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/foundry-agent-app/: Dockerfile  main.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/foundry-container/: Dockerfile  main.py
examples/agentsec/3-agent-runtimes/microsoft-foundry/scripts/: test-docker-local.sh
examples/agentsec/3-agent-runtimes/microsoft-foundry/tests/: __init__.py
(+267 files in other folders)
