# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentsec-simple-examples"
version = "0.1.0"
description = "Simple agentsec usage examples"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../..", develop = true }

# OpenAI Python client
openai = ">=1.0.0"

# Cohere Python SDK (v2 chat)
cohere = ">=5.0.0"

# Mistral AI Python SDK
mistralai = ">=1.0.0"

# Strands Agents SDK for building AI agents
strands-agents = ">=0.1.0"

# AWS SDK for Bedrock
boto3 = ">=1.34.0"

# MCP client library for tool integration
mcp = ">=1.0.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"
