# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "langgraph-agent-example"
version = "0.1.0"
description = "LangGraph agent example with agentsec protection"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# LangGraph framework
langgraph = ">=0.2.0"

# LangChain core components
langchain-core = ">=0.3.0"

# LangChain AWS integration (ChatBedrock)
langchain-aws = ">=0.2.0"

# LangChain OpenAI integration (ChatOpenAI, AzureChatOpenAI)
langchain-openai = ">=0.2.0"

# LangChain Google Vertex AI integration (ChatVertexAI -- used when sdk=vertexai)
langchain-google-vertexai = ">=2.0.0"

# LangChain Google GenAI integration (ChatGoogleGenerativeAI - recommended)
# Uses google.genai.Client which is properly patched by agentsec
langchain-google-genai = ">=4.0.0"

# AWS SDK for Bedrock
boto3 = ">=1.34.0"

# OpenAI SDK (for OpenAI and Azure providers)
openai = ">=1.0.0"

# Google Cloud Vertex AI SDK (for Vertex AI with ADC)
google-cloud-aiplatform = ">=1.50.0"

# MCP client library
mcp = ">=1.0.0"

# Environment variable loading
python-dotenv = ">=1.0.0"

# YAML config parsing
pyyaml = ">=6.0.0"

# OpenTelemetry for LangGraph adapter integration
opentelemetry-sdk = ">=1.20.0"
opentelemetry-api = ">=1.20.0"
