# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "agentcore-example"
version = "0.1.0"
description = "AWS AgentCore examples with agentsec protection (Direct, Container, Lambda deploy)"
authors = ["Cisco <ai-defense@cisco.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Cisco AI Defense SDK for AI Defense protection
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# Strands Agents SDK for building AI agents
strands-agents = ">=0.1.0"

# AWS SDK for Bedrock LLM access
boto3 = ">=1.28.0"

# AWS Bedrock AgentCore SDK
bedrock-agentcore = ">=0.1.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# MCP client library for tool integration (optional - enables MCP tool protection)
mcp = ">=1.11.0"
