# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "gcp-vertex-ai-agent-engine-example"
version = "0.1.0"
description = "GCP Vertex AI Agent Engine example with agentsec (Cisco AI Defense) protection"
authors = ["Cisco <ai-defense@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Cisco AI Defense SDK
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# Google Cloud AI libraries (both patched by agentsec)
# - google-cloud-aiplatform: vertexai SDK (GOOGLE_AI_SDK=vertexai)
# - google-genai: modern unified SDK (GOOGLE_AI_SDK=google_genai, default)
google-cloud-aiplatform = ">=1.40.0"
google-genai = ">=1.0.0"

# LangChain for agent framework (similar to Strands in AWS)
# langchain-google-vertexai 2.x/3.x requires langchain-core 1.x; keep compatible range
langchain = ">=0.3.0"
langchain-google-genai = ">=2.0.0"
langchain-google-vertexai = ">=2.0.0,<4"
langchain-core = ">=0.3.0,<2.0.0"

# Web framework for Cloud Run and GKE
fastapi = ">=0.100.0"
uvicorn = ">=0.23.0"
pydantic = ">=2.0.0"

# Environment loading
python-dotenv = ">=1.0.0"

# Nested event loops for sync tool calling async MCP
nest-asyncio = ">=1.6.0"

# MCP client for MCP tool protection
mcp = ">=1.11.0,<2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
pytest-mock = ">=3.12.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
