# Copyright 2026 Cisco Systems, Inc. and its affiliates
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "microsoft-foundry-example"
version = "0.1.0"
description = "Microsoft Azure AI Foundry examples with agentsec protection (Agent App, Azure Functions, Container)"
authors = ["Cisco <ai-defense@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"

# Cisco AI Defense SDK for AI Defense protection
cisco-aidefense-sdk = { path = "../../../..", develop = true }

# LangChain for agent orchestration (with Azure OpenAI support)
langchain-openai = ">=0.1.0"
langchain-core = ">=0.2.0"

# Environment variable loading from .env files
python-dotenv = ">=1.0.0"

# MCP client library for tool integration (optional - enables MCP tool protection)
mcp = ">=1.11.0"

# HTTP client (used by agentsec)
httpx = ">=0.24.0"

# Web framework (for Flask-based deployments)
flask = ">=3.0.0"

# Nested async support (for MCP tools in sync context)
nest-asyncio = ">=1.5.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-asyncio = ">=0.21.0"

[tool.poetry.group.azure-functions]
optional = true

[tool.poetry.group.azure-functions.dependencies]
azure-functions = ">=1.17.0"
